--- a/styles.css
+++ b/styles.css
@@ -162,6 +162,9 @@ button.btn-hack.serv {
 .exceptional .flexbox {
     gap: 128px;
 }
+.osp_bike {
+    width: 658px;
+}
 .exceptional h2 {
     font-family: 'Roboto Serif', Times, serif;
     font-size: 55px;
@@ -185,27 +188,19 @@ button.btn-hack.serv {
     display: grid;
     place-items: center;
     background-color: #92A5BA;
-    padding: 128px;
+    padding: 96px;
 }
-/* .modern .bg {
+.modern .bg {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 100;
+    z-index: 0;
     overflow: hidden;
-} */
+}
 .modern .bg img {
-    min-width: 100%;
-    min-height: 100%;
-    max-width: none;
-    max-height: none;
-
+    width: 380px;
 }
 .modern .text {
-    width: 600px;
-    margin-left: 275px;
+    display: grid;
+    place-items: center;
     z-index: 1;
 } 
 .modern .text h2 {
@@ -216,6 +211,39 @@ button.btn-hack.serv {
     text-align: center;
     letter-spacing: 0px;
     color: #25294F;
+    text-shadow: 
+        -2px -2px 0 #92A5BA,
+        2px -2px 0 #92A5BA,
+        -2px 2px 0 #92A5BA,
+        2px 2px 0 #92A5BA;
+}
+/* More than a job. A calling. */
+.threecolumn {
+    display: grid;
+    place-items: center;
+    background-color: #FFFEFE;
+    padding: 128px;
+}
+.threecolumn .flexbox {
+    gap: 128px;
+}
+.threecolumn h3 {
+    font-family: 'Roboto Serif', Times, serif;
+    font-size: 35px;
+    font-weight: 700;
+    line-height: 40px;
+    text-align: left;
+    letter-spacing: 0px;
+    color: #25294F !important;
+}
+.threecolumn p {
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: left;
+    letter-spacing: 0px;
+    color: #000001;
 }
 /* Responsive design for smaller screens */
 @media (max-width: 768px) {
@@ -225,5 +253,8 @@ button.btn-hack.serv {
     .applythelaw .text, .applythelaw .video {
         width: 90%;
         margin: 0 5%;
+    }
+    .threecolumn br {
+        display: none;
     }
 }    
