--- a/styles.css
+++ b/styles.css
@@ -76,10 +76,10 @@ button.btn-hack.serv {
     z-index: 1;
     width: 100%;
     align-items: center;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
     padding: 0;
 }
-/* HEADER */
+/* Apply the Law. Apply Yourself. Apply Today. */
 .applythelaw {
     display: flex;
     flex-direction: column;
@@ -185,24 +185,33 @@ button.btn-hack.serv {
 }
 /* Join Our Modern, Multi-Disciplinary Police Force */
 .modern {
-    display: grid;
-    place-items: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
     background-color: #92A5BA;
     padding: 96px;
 }
+
 .modern .bg {
     position: absolute;
     z-index: 0;
     overflow: hidden;
 }
+
 .modern .bg img {
     width: 380px;
 }
+
 .modern .text {
-    display: grid;
-    place-items: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     z-index: 1;
-} 
+}
+
 .modern .text h2 {
     font-family: 'Roboto Serif', Times, serif;
     font-size: 55px;
@@ -211,7 +220,7 @@ button.btn-hack.serv {
     text-align: center;
     letter-spacing: 0px;
     color: #25294F;
-    text-shadow: 
+    text-shadow:
         -2px -2px 0 #92A5BA,
         2px -2px 0 #92A5BA,
         -2px 2px 0 #92A5BA,
@@ -245,6 +254,135 @@ button.btn-hack.serv {
     letter-spacing: 0px;
     color: #000000;
 }
+/* Do You Have What it Takes? */
+.whatittakes {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    position: relative;
+    overflow: hidden;
+    width: 100vw;
+    height: calc(100vh - 200px);
+    margin: 0;
+    padding: 0;
+    z-index: 1;
+}
+.whatittakes .bg-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    overflow: hidden;
+}
+.whatittakes .bg-container img {
+    max-width: none;
+    max-height: 100%;
+    margin: auto;
+    position: absolute;
+    top: 0;
+    right: 0;
+    opacity: 20%;
+}
+.whatittakes .text {
+    width: 50%;
+    padding-left: 275px;
+}
+.whatittakes .video {
+    width: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}  
+.whatittakes .video video {
+    width: 100%;
+    object-fit: cover;
+    border: none;
+}
+.whatittakes h2 {
+    font-family: 'Roboto Serif', Times, serif;
+    font-size: 55px;
+    font-weight: 700;
+    line-height: 65px;
+    text-align: left;
+    margin: 0;
+    color: #92A5BA;
+}
+.whatittakes p {
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    color: #DEDEDE;
+    margin: 35px 0 70px 0;
+    width: 80%;
+}
+/* A Natural Next Step for Military Veterans */
+.service {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    position: relative;
+    overflow: hidden;
+    width: 100vw;
+    /* height: 750px; */
+    margin: 0;
+    padding: 0;
+    z-index: 1;
+    background-color: #D3D3D0;
+    padding: 192px;
+}
+.service .bg-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    overflow: hidden;
+}
+.service .bg-container img {
+    max-width: none;
+    max-height: 100%;
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 100%;
+}
+.service .flexbox .column {
+    width: 50%;
+}
+.service .flexbox .column.one {
+    padding-right:128px;
+}
+.service .flexbox .column.two {
+    padding-right:128px;
+}
+.service h2 {
+    font-family: 'Roboto Serif', Times, serif;
+    font-size: 55px;
+    font-weight: 700;
+    line-height: 65px;
+    text-align: left;
+    margin: 0;
+    color: #25294F;
+}
+.service p {
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    color: #000000;
+    margin: 35px 0 70px 0;
+    width: 80%;
+}
 /* Responsive design for smaller screens */
 @media (max-width: 768px) {
     .flexbox {
@@ -254,7 +392,7 @@ button.btn-hack.serv {
         width: 90%;
         margin: 0 5%;
     }
-    .threecolumn br {
+    br {
         display: none;
     }
 }    
