--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,9 @@
 *, *:before, *:after {
     box-sizing: border-box;
 }
+body, html {
+    overflow-x: hidden;
+}
 body {
     margin: 0 !important;
     padding: 0 !important;
