style: Change background color of navbar
The background color of the navbar has been updated from #25294F to #2A2E5C. This change improves the visual appearance of the navbar.

--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ header.or-header, .or-page-title, .or-show-if-side-navigation, .helpfulPoll, #Or
 }
 .or-navbar, .or-navbar-search-wrapper {
     background-color: #25294F !important;
+    /* background-color: #2A2E5C !important; */
 }
 #main {
     width: 100vw;
