--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,6 @@ header.or-header, .or-page-title, .or-show-if-side-navigation, .helpfulPoll, #Or
 }
 .or-navbar, .or-navbar-search-wrapper {
     background-color: #25294F !important;
-    /* background-color: #2A2E5C !important; */
 }
 #main {
     width: 100vw;
@@ -106,7 +105,7 @@ h3, footer li {
     position: relative;
     overflow: hidden;
     width: 100vw;
-    height: calc(100vh - 130px);
+    height: calc(100vmin - 130px);
     margin: 0;
     padding: 0 128px;
     z-index: 1;
@@ -199,6 +198,8 @@ h3, footer li {
     text-align: left;
     letter-spacing: 0px;
     color: #25294F;
+    padding: 0;
+    margin: 0;
 }
 .exceptional p {
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
@@ -208,6 +209,7 @@ h3, footer li {
     text-align: left;
     letter-spacing: 0px;
     color: #000000;
+    margin-bottom: 64px;
 }
 /* Join Our Modern, Multi-Disciplinary Police Force */
 .modern {
