[style] Improve video styling and controls
- Removed unused YouTube video iframe.
- Added a new video element with custom controls for the "protostars" section.
- Adjusted CSS to properly display and size the new video element.

--- a/styles.css
+++ b/styles.css
@@ -517,8 +517,11 @@ h3, footer li {
         margin: 0;
         padding: 0;
     }
-    .video.youtube{
+    .video.protostars{
         margin: 60px 0 0 0 !important;
+    }
+    .video.protostars video{
+        width: 100% !important;
     }
     .exceptional .flexbox,
     .threecolumn .flexbox {
@@ -586,8 +589,5 @@ h3, footer li {
     .service {
         padding: 32px 0;
     } 
-}
-div.video.youtube iframe html body.date-20231004.en_US.ltr.site-center-aligned.site-as-giant-card.gecko.gecko-109 div#player div#movie_player.html5-video-player.ytp-hide-controls.ytp-exp-bottom-control-flexbox.ytp-title-enable-channel-logo.ytp-embed.ytp-embed-playlist.unstarted-mode.ytp-pause-overlay-controls-hidden div.ytp-chrome-top.ytp-show-cards-title {
-    display: none !important;
 }
 /*</style>
