--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ h3, footer li {
     font-size: 125%;
     width: 200px;
     padding: 12px 24px;
-    color: #000000;
+    color: #000000 !important;
     background-color: #f2b827;
     border: none;
     border-radius: 4px;
@@ -78,7 +78,7 @@ h3, footer li {
 }
 .apply-now-btn:active,.apply-now-btn:hover,.apply-now-btn:focus,.apply-now-btn:visited {
     background-color: #f2b827;
-    color: #000000;
+    color: #000000 !important;
 }
 .apply-now-btn.serv {
     background-color: #92A5BA !important;
@@ -594,7 +594,7 @@ h3, footer li {
     text-decoration: none;
     font-size: 125%;
     padding: 24px;
-    color: #000000;
+    color: #000000 !important;
     background-color: #f2b827;
 }
 .steps-section {
